[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["cookies", "json", "blocking"] }
regex = "1.5"
num-traits = "0.2"
num-integer = "0.1"
colored = "2"